# image

./: BMP.cpp  BMP.h  CMakeLists.txt  LICENSE  README.md  image_processor.cpp
bmp_image/: BMP.h
cmd/: cmd_reader.cpp  cmd_reader.h  exceptions.h
filters_module/: base_filter.cpp  base_filter.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  gauss_blur.cpp  gauss_blur.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sharp.cpp  sharp.h  sobel.cpp  sobel.h
producer/: producer.cpp  producer.h
